Update and rename 1stAuction.yml to Auctionrelay2.yml
Changed to run every 5 minutes for testing.

--- a/.github/workflows/Auctionrelay2.yml
+++ b/.github/workflows/Auctionrelay2.yml
@@ -2,7 +2,7 @@
 name: AuctionRelay2
 on:
   schedule:
-    - cron: '5/ * * * *'
+    - cron: '*/5 * * * *'
 jobs:
   Auction:
     runs-on: ubuntu-latest
